# fava

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  How_to_use_favapy_in_a_notebook.ipynb  Infer_functional_associations_VAE_keras.ipynb  Infer_functional_associations_VAE_keras.py  LICENSE  Manuscript_figues_analyses.ipynb  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish.yaml  codecov.yml  test.yaml
.ipynb_checkpoints/: Infer_functional_associations_VAE_keras-checkpoint.ipynb
FAVA_networks/Combined_network/: CytoscapeNet_FavaNet_70Percent.tsv  FavaNet_70Percent.tsv
Supplementary Material/: List-of-pride-datasets-analyzed.xlsx  human_bottom10percent.txt
docs/: conf.py  index.rst  requirements.txt
docs/source/: API.rst  Command_Line_Interface.rst  Installation.rst  Introduction.rst  Tutorials.rst  Using_FAVA_as_a_Python_library.rst  api.md  api_doc.rst  conf.py  index.md  index.rst  modules.rst  notebook.rst
fava/: fava.py
fava_tool/: fava_tool.py
infava/: infava.py
jupyter-notebook/: Infer_functional_associations_VAE_keras.ipynb  Manuscript_figues_analyses.ipynb
src/favapy/: fava.py
tests/: test_basic.py  test_fava.py
