[metadata]
name = infava
version = 0.1.0
author = Mikaela Koutrouli
author_email = mikaela.koutrouli@cpr.ku.dk
description = Infer Functional Associations using Variational Autoencoders on -Omics data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikelkou/VAE_Functional_associations
project_urls =
    Bug Tracker = https://github.com/mikelkou/VAE_Functional_associations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = infava
packages = find:
python_requires = >=3.7
install_requires = 
    tensorflow >= 2
    keras
    numpy
    pandas

[options.entry_points]
console_scripts =
    infava = infava.infava:main

[options.packages.find]
where = infava
