[metadata]
name = favapy
version = 0.3.1
author = Mikaela Koutrouli
author_email = mikaela.koutrouli@cpr.ku.dk
description = Infer Functional Associations using Variational Autoencoders on -Omics data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikelkou/VAE_Functional_associations
project_urls =
    Bug Tracker = https://github.com/mikelkou/VAE_Functional_associations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    tensorflow >= 2
    keras
    numpy
    pandas

[options.entry_points]
console_scripts =
    favapy = favapy.fava:main

[options.packages.find]
where = src
